--- a/apps/base/linkding/deployment.yaml
+++ b/apps/base/linkding/deployment.yaml
@@ -17,3 +17,10 @@ spec:
           image: sissbruecker/linkding:1.39.1
           ports:
             - containerPort: 9090
+          volumeMounts:
+            - linkding-data
+          mountPath: /etc/linkding/data
+      volumes:
+        - name: linkding-data
+          persistantVolumeClaim:
+            claimName: linkding-data-pvc
