--- a/apps/base/linkding/deployment.yaml
+++ b/apps/base/linkding/deployment.yaml
@@ -17,9 +17,10 @@ spec:
           image: sissbruecker/linkding:1.39.1
           ports:
             - containerPort: 9090
+
           volumeMounts:
-            - linkding-data
-          mountPath: /etc/linkding/data
+            - name: linkding-data
+              mountPath: /etc/linkding/data
       volumes:
         - name: linkding-data
           persistantVolumeClaim:
