changes meta data name

--- a/apps/staging/linkding/a-secret.yaml
+++ b/apps/staging/linkding/a-secret.yaml
@@ -5,7 +5,7 @@ data:
 kind: Secret
 metadata:
     creationTimestamp: null
-    name: test-secret
+    name: a-secret
 sops:
     kms: []
     gcp_kms: []
