--- a/apps/base/linkding/deployment.yaml
+++ b/apps/base/linkding/deployment.yaml
@@ -23,8 +23,8 @@ spec:
             - containerPort: 9090
 
 					envFrom:
-  					- configMapRef:
-      				name: linkding-configmap
+            #	- configMapRef:
+            #	name: linkding-configmap
   					- secretRef:
       				name: linkding-container-env
 
