--- a/monitoring/controllers/base/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/base/kube-prometheus-stack/release.yaml
@@ -28,4 +28,21 @@ spec:
   values:
     grafana:
       adminPassword: iann
+      ingress:
+      enabled: true
 
+      ingressClassName: traefik
+
+      hosts:
+        - grs.ian-naylor.com
+
+      ## Path for grafana ingress
+      path: /
+
+      ## TLS configuration for grafana Ingress
+      ## Secret must be manually created in the namespace
+      ##
+      tls: []
+      # - secretName: grafana-general-tls
+      #   hosts:
+      #   - grafana.example.com
