--- a/apps/staging/lessons-in-progress/kustomization.yaml
+++ b/apps/staging/lessons-in-progress/kustomization.yaml
@@ -2,5 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: lessons-in-progress
 resources:
-  - mysql-cluster.yaml
-  - blog-db-secret.yaml
+  - ../../base/lessons-in-progress/
