--- a/infrastructure/controllers/base/lessons-in-progress/kustomization.yaml
+++ b/infrastructure/controllers/base/lessons-in-progress/kustomization.yaml
@@ -2,5 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: lessons-in-progress
 resources:
+  - namespace.yaml
   - mysql-cluster.yaml
   - blog-db-secret.yaml
