--- a/apps/base/lessons-in-progress/kustomization.yaml
+++ b/apps/base/lessons-in-progress/kustomization.yaml
@@ -1,5 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+metadata:
+  name: lessons-in-progress
 resources:
   - namespace.yaml
   - cluster-cr.yaml
@@ -9,7 +11,6 @@ resources:
   - frontend-deployment.yaml
   - frontend-ingress.yaml
   - frontend-service.yaml
-  - kustomization.yaml
   - posts-migration-job.yaml
   - posts-service-deployment.yaml
   - posts-service-ingress.yaml
