--- a/apps/base/lessons-in-progress/cluster-cr.yaml
+++ b/apps/base/lessons-in-progress/cluster-cr.yaml
@@ -8,7 +8,7 @@ spec:
   componentSpecs:
     - name: mysql
       componentDefRef: mysql
-      clusterVersionRef: mysql-8.0.33
+      version: mysql-8.0.33
       replicas: 1
       volumeClaimTemplates:
         - name: data
