Disable automatic KubeBlocks addon installation

--- a/clusters/staging/kubeblocks/helm-release.yaml
+++ b/clusters/staging/kubeblocks/helm-release.yaml
@@ -14,5 +14,8 @@ spec:
         namespace: kubeblocks
       version: ">=0.9.0"
   values:
+    installCRDs: true
+    addons:
+      enabled: false
     image:
       pullPolicy: IfNotPresent
