--- a/clusters/staging/kubeblocks/addons/mysql-addon.yaml
+++ b/clusters/staging/kubeblocks/addons/mysql-addon.yaml
@@ -3,10 +3,7 @@ kind: Addon
 metadata:
   name: mysql
 spec:
-  type: Helm
   helm:
-    chart:
-      repo: https://apecloud.github.io/helm-charts
-      name: mysql
-      version: 0.9.0
-
+    repo: https://apecloud.github.io/helm-charts
+    chart: mysql
+    version: 1.0.0
