--- a/clusters/staging/flux-system/gotk-sync.yaml
+++ b/clusters/staging/flux-system/gotk-sync.yaml
@@ -20,7 +20,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 10m0s
-  path: ./clusters/staging
+  path: ./clusters/staging/flux-system
   prune: true
   sourceRef:
     kind: GitRepository
