Adds updated addon yaml

--- a/clusters/staging/kubeblocks/addons/mysql-addon.yaml
+++ b/clusters/staging/kubeblocks/addons/mysql-addon.yaml
@@ -3,7 +3,6 @@ kind: Addon
 metadata:
   name: mysql
 spec:
+  type: helm
   helm:
-    repo: https://apecloud.github.io/helm-charts
-    chart: mysql
-    version: 1.0.0
+    chartLocationURL: https://apecloud.github.io/helm-charts/mysql-1.0.0.tgz
