Make default install values a list

--- a/clusters/staging/kubeblocks/addons/mysql-addon.yaml
+++ b/clusters/staging/kubeblocks/addons/mysql-addon.yaml
@@ -6,4 +6,4 @@ spec:
   type: Helm
   helm:
     chartLocationURL: https://apecloud.github.io/helm-charts/mysql-1.0.0.tgz
-  defaultInstallValues: {}
+  defaultInstallValues: []
