Deploy lessons-in-progress MySQL cluster (KubeBlocks + Longhorn)

--- a/clusters/staging/flux-system/kustomization.yaml
+++ b/clusters/staging/flux-system/kustomization.yaml
@@ -4,3 +4,4 @@ resources:
   - gotk-components.yaml
   - gotk-sync.yaml
   - kubeblocks-kustomization.yaml
+  - lessons-in-progress-kustomization.yaml
