Fix MySQL cluster spec: use serviceVersion (no componentVersionRef)

--- a/clusters/staging/lessons-in-progress/mysql/cluster.yaml
+++ b/clusters/staging/lessons-in-progress/mysql/cluster.yaml
@@ -10,8 +10,8 @@ spec:
 
   componentSpecs:
     - name: mysql
-      componentVersionRef: mysql
       replicas: 1
+      serviceVersion: "8.0.44"
       volumeClaimTemplates:
         - name: data
           spec:
