Deploy Longhorn via dedicated Flux kustomization

--- a/clusters/staging/flux-system/kustomization.yaml
+++ b/clusters/staging/flux-system/kustomization.yaml
@@ -6,3 +6,4 @@ resources:
   - kubeblocks-kustomization.yaml
   - lessons-in-progress-kustomization.yaml
   - infrastructure-controllers-kustomization.yaml
+  - longhorn-kustomization.yaml
