--- a/clusters/staging/flux-system/infrastructure-controllers-kustomization.yaml
+++ b/clusters/staging/flux-system/infrastructure-controllers-kustomization.yaml
@@ -12,4 +12,7 @@ spec:
     name: flux-system
   wait: true
   timeout: 15m0s
-
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
