--- a/clusters/staging/flux-system/kubeblocks-addons-kustomization.yaml
+++ b/clusters/staging/flux-system/kubeblocks-addons-kustomization.yaml
@@ -1,11 +1,11 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: lessons-in-progress
+  name: kubeblocks-addons
   namespace: flux-system
 spec:
   interval: 10m0s
-  path: ./clusters/staging/lessons-in-progress
+  path: ./clusters/staging/kubeblocks/addons
   prune: true
   sourceRef:
     kind: GitRepository
